# ai-summit-hackaton-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  activate.sh  langgraph.json  pyproject.toml
.github/workflows/: docker-publish.yml
demandeur/: main.py
server/: main.py
src/: graph.py  main.py
src/models/: carbon.py  overallstate.py
src/nodes/: event_type_node.py
